<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/transactions_logo"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_addTransactions"
        android:icon="@drawable/add_button"
        android:title="@string/add_transactions_title" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/scanner_logo"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/chart_logo"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_logo"
        android:title="@string/title_settings" />
</menu>