<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transactions">

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.bondoman_pdd.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        android:fontFamily="@font/montserrat_medium"
        tools:layout="@layout/fragment_transactions">

        <action
            android:id="@+id/action_transactionsFragment_to_addTransactionFragment"
            app:destination="@id/navigation_addTransactions" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addTransactions"
        android:name="com.example.bondoman_pdd.ui.addTransactions.AddTransactionFragment"
        android:label="@string/add_transactions_title"
        android:fontFamily="@font/montserrat_medium"
        tools:layout="@layout/fragment_add_transaction" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.example.bondoman_pdd.ui.scanner.ScannerFragment"
        android:label="@string/title_scanner"
        android:fontFamily="@font/montserrat_medium"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.bondoman_pdd.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        android:fontFamily="@font/montserrat_medium"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.bondoman_pdd.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        android:fontFamily="@font/montserrat_medium"
        tools:layout="@layout/fragment_settings">

    <action
        android:id="@+id/action_settingsFragment_to_addTransactionFragment"
        app:destination="@id/navigation_addTransactions" />
    </fragment>

</navigation>