<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.transactions.TransactionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/background">

        <Button
            android:id="@+id/savebutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/button_background"
            android:drawableLeft="@drawable/download_button"
            android:orientation="vertical"
            android:text="@string/save_transactions"
            android:textAllCaps="false"
            android:textSize="25sp" />

        <Button
            android:id="@+id/sendbutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/button_background"
            android:drawableLeft="@drawable/send_button"
            android:orientation="vertical"
            android:text="@string/send_transactions"
            android:textAllCaps="false"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/logoutbutton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/logout"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>